--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_inicio">Inicio</string>
+    <string name="menu_inicio">Ubicación</string>
     <string name="menu_perfil">Perfil</string>
     <string name="menu_slideshow">Inmuebles</string>
 </resources>
